feat: changes from server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   frontend:
     build: ./frontend
@@ -9,7 +7,7 @@ services:
       - backend
 
   backend:
-    build: ./backend
+    build: ./server
     ports:
       - "3000:3000"
     env_file:
